cmake_minimum_required(VERSION 3.5)
project(cxxtalk)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wno-unused-variable")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-unused-variable")

add_executable(lambdas lambdas.cpp)
add_executable(range_based_for range_based_for.cpp)
add_executable(override_keyword override_keyword.cpp)
add_executable(constexpr constexpr.cpp)
add_executable(enum_class enum_class.cpp)
add_executable(initialiser_lists initialiser_lists.cpp)
add_executable(rvalue_references rvalue_references.cpp)
add_executable(user_defined_literals user_defined_literals.cpp)
add_executable(static_assert static_assert.cpp)
add_executable(functional functional.cpp)
add_executable(move_constructor move_constructor.cpp)
add_executable(example1 example1.cpp)
add_executable(example_cxx11 example_cxx11.cpp)
add_executable(example_cxx14 example_cxx14.cpp)