cmake_minimum_required(VERSION 2.8)
project(cxxtalk)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wno-unused-variable")

add_executable(lambdas lambdas.cpp)
add_executable(range_based_for range_based_for.cpp)
add_executable(override_keyword override_keyword.cpp)
add_executable(constexpr constexpr.cpp)
add_executable(enum_class enum_class.cpp)
add_executable(initialiser_lists initialiser_lists.cpp)
add_executable(reference_types reference_types.cpp)
add_executable(user_defined_literals user_defined_literals.cpp)
add_executable(static_assert static_assert.cpp)
add_executable(functional functional.cpp)
add_executable(moveable_resources moveable_resources.cpp )
add_executable(smart_pointers smart_pointers.cpp)
add_executable(type_inference type_inference.cpp)
add_executable(functional2 functional2.cpp)
add_executable(avoiding_copies avoiding_copies.cpp )